name:                projecteuler
version:             0.1.0.0
synopsis:            Various Project Euler problems solved using Haskell
homepage:            https://github.com/quchen/HaskellEuler
license:             BSD3
license-file:        LICENSE
author:              David Luposchainsky
maintainer:          dluposchainsky@gmail.com
build-type:          Simple
cabal-version:       >=1.8


executable projecteuler
  main-is:           Main.hs
  build-depends:     base ==4.6.*,
                     array ==0.4.*,
                     primes ==0.2.*,
                     permutation ==0.4.*,
                     mtl ==2.1.*,
                     QuickCheck ==2.6.*,
                     parallel ==3.2.*,
                     deepseq ==1.3.*,
                     vector ==0.10.*
  hs-source-dirs:    src
